Fixes modeless layout in pipeline detailed view on smaller screensize

--- a/cdap-ui/app/cdap/components/PipelineDetails/PipelineModeless/PipelineModeless.scss
+++ b/cdap-ui/app/cdap/components/PipelineDetails/PipelineModeless/PipelineModeless.scss
@@ -17,7 +17,6 @@
 @import '../../../styles/variables.scss';
 
 $modeless-width: 730px;
-$modeless-height: 496px;
 $sidepanel-width: 170px;
 $modeless-header-height: 60px;
 $header-close-icon-size: 16px;
@@ -28,7 +27,6 @@ $container-padding: 0 30px;
 // a static header and a footer and only the content scrolls.
 .pipeline-modeless-container {
   width: $modeless-width;
-  height: $modeless-height;
   position: static;
   z-index: 999;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
