--- a/cdap-ui/app/styles/common.less
+++ b/cdap-ui/app/styles/common.less
@@ -239,6 +239,7 @@ footer {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
   color: @grey-01;
   background-color: white;
+  margin-bottom: 60px;
 
   .modeless-header {
     background-color: @grey-08;
